# static-embeddings

./: .gitignore  01_download_data.py  02_embed.py  03_index.py  04_evaluate.py  05_report.py  CLAUDE.md  DECISION.md  PLAN.md  README.md  _coldstart_child.py  bench.toml  code_teacher_experiment.py  correctness_gate.py  datasets_io.py  docker-compose.yml  embed_a.py  env.py  extra_measurements.py  manifest.py  pyproject.toml  qc.py  run_all.py  speed.py  static_numpy.py  systems.py
